--- a/Day 1/Numpy.ipynb
+++ b/Day 1/Numpy.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 2,
@@ -401,12 +401,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = np.array([[1,2],[3,4]], dtype=np.float64)\n",
     "y = np.array([[5,6],[7,8]], dtype=np.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 2.]\n",
+      " [3. 4.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 3.]\n",
+      " [2. 4.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# chuyển vị ma trận\n",
+    "print(x.T)"
    ]
   },
   {
@@ -574,6 +611,16 @@
     "# ma trận * vecotr\n",
     "print(x.dot(v))\n",
     "print(np.dot(x, v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1,2,3]\n",
+    "y = [3,4,5]"
    ]
   },
   {
